[project]
name = "crewai_customer_support"
version = "0.1.0"
description = "crewai_customer_support using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
crewai_customer_support = "crewai_customer_support.main:run"
run_crew = "crewai_customer_support.main:run"
train = "crewai_customer_support.main:train"
replay = "crewai_customer_support.main:replay"
test = "crewai_customer_support.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
